# textQuest

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Game.hpp  GameState.hpp  IO.hpp  SaveManager.hpp  ScriptEngine.hpp  StateMachine.hpp  States.hpp  Story.hpp
scenes/: Story.cpp
src/: Game.cpp  States.cpp  main.cpp
